--- a/pom.xml
+++ b/pom.xml
@@ -316,6 +316,17 @@
             <artifactId>mybatis-plus</artifactId>
             <version>2.3</version>
         </dependency>
+        <!--七牛云文件上传-->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>7.2.25</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.3</version>
+        </dependency>
     </dependencies>
 
 </project>
